--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.11"
 dependencies = [
     "beautifulsoup4>=4.14.3",
     "google-genai>=1.55.0",
+    "markdown>=3.10",
     "pandas>=2.3.3",
     "python-dotenv>=1.2.1",
     "pyyaml>=6.0.3",
