chore(bump): Add README.md to bump

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,4 +36,7 @@ commit = true
 filename = "pyproject.toml"
 
 [[tool.bumpversion.files]]
+filename = "README.md"
+
+[[tool.bumpversion.files]]
 filename = "src/ohmyscrapper/__init__.py"
