--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ commit = true
 
 [[tool.bumpversion.files]]
 filename = "pyproject.toml"
+search = 'version = "{current_version}"'
+replace = 'version = "{new_version}"'
 
 [[tool.bumpversion.files]]
 filename = "README.md"
