feat(confiug): Make `url_sniffing` file as dict

--- a/src/ohmyscrapper/core/default_files/url_sniffing.yaml
+++ b/src/ohmyscrapper/core/default_files/url_sniffing.yaml
@@ -1,23 +1,23 @@
 linkedin_feed:
   metatags:
-  - og:url
+    og:url: url_destiny
 
 linkedin_job:
   bodytags:
-  - h1
+    h1: title
   metatags:
-  - og:title
-  - og:description
-  - description
+    og:title: title
+    og:description: description
+    description: description
 
 linkedin_post:
   bodytags:
-  - h1
+    h1: title
   metatags:
-  - og:title
-  - og:description
-  - description
+    og:title: title
+    og:description: description
+    description: description
 
 linkedin_redirect:
   metatags:
-  - og:url
+    og:url: url_destiny
