feat(url_sniffing): Add `load_links` to the `atags` config

--- a/src/ohmyscrapper/core/default_files/url_sniffing.yaml
+++ b/src/ohmyscrapper/core/default_files/url_sniffing.yaml
@@ -23,3 +23,7 @@ linkedin_redirect:
     og:url: url_destiny
   atags:
     first-tag-as-url_destiny: 5
+
+read_all_a_tags:
+  atags:
+    load_atags: True
