chore(pyproject): Update license and urls

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ dependencies = [
     "urlextract>=1.9.0",
 ]
 
+[project.urls]
+Repository = "https://github.com/bouli/ohmyscrapper"
+Changelog = "https://github.com/bouli/ohmyscrapper/releases/latest"
+
 [project.scripts]
 ohmyscrapper = "ohmyscrapper:main"
 
